--- a/docs/assets/styles/styles.css
+++ b/docs/assets/styles/styles.css
@@ -7,8 +7,8 @@ body {
 
 canvas {
     /* background: lightblue; */
-    padding: 0;
+    /* padding: 0;
     margin: 0 auto;
     margin-bottom: 1rem;
-    display: block;
+    display: block; */
 }
